--- a/main.html
+++ b/main.html
@@ -1,20 +1,26 @@
 <!DOCTYPE html>
 
 <html>
+
 <head>
+	<meta charset=utf-8 />
+		<title>Return first and last name from a form</title>
+		<style type="text/css">
+			body {margin: 30px;}
+		</style> 
 	<link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
-	<!-- the entire body must be written by student -->
-	<div class="navbar">
-		<ul class="items">
-			<li> Home</li>
-			<li> About</li>
-			<li> Contact Us</li>
-			<li> Itinerary</li>
-		</ul>
-	</div>
+	<form id="form1" onsubmit="getFormvalue()">
+		First name: <input type="text" name="fname" id="fname"><br>
+		Last name: <input type="text" name="lname" id="lname"><br>
+		<input type="submit" value="Submit">
+	</form>
+	
     <script type="text/javascript" src="./script.js">
 </script>
+
 </body>
+
 </html>
