--- a/main.html
+++ b/main.html
@@ -4,20 +4,34 @@
 
 <head>
 	<meta charset=utf-8 />
-		<title>Return first and last name from a form</title>
 		<style type="text/css">
-			body {margin: 30px;}
+			.navbar {
+				background-color: #D3D3D3;
+			    padding: 10px;
+			}
+
+		    .navbar ul {
+			    list-style: none;
+			    padding: 0;
+		    }
+
+		    .navbar li {
+			    display: inline;
+			    margin-right: 1rem;
+		    }
 		</style> 
 	<link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
-	<form id="form1" onsubmit="getFormvalue()">
-		First name: <input type="text" name="fname" id="fname"><br>
-		Last name: <input type="text" name="lname" id="lname"><br>
-		<input type="submit" value="Submit">
-	</form>
-	
+	<div class="navbar">
+		<ul>
+			<li>Home</li>
+		    <li>About</li>
+		    <li>Contact Us</li>
+            <li>Itinerary</li>
+	    </ul>
+	</div>
     <script type="text/javascript" src="./script.js">
 </script>
 
