--- a/main.html
+++ b/main.html
@@ -3,37 +3,21 @@
 <html>
 
 <head>
-	<meta charset=utf-8 />
-		<style type="text/css">
-			.navbar {
-				background-color: #D3D3D3;
-			    padding: 10px;
-			}
-
-		    .navbar ul {
-			    list-style: none;
-			    padding: 0;
-		    }
-
-		    .navbar li {
-			    display: inline;
-			    margin-right: 1rem;
-		    }
-		</style> 
 	<link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
-	<div class="navbar">
-		<ul>
-			<li>Home</li>
-		    <li>About</li>
-		    <li>Contact Us</li>
-            <li>Itinerary</li>
-	    </ul>
-	</div>
+	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
-</script>
+    </script>
+	<div class="container">
+		<ul class="list">
+			<li>Home</li>
+			<li>About</li>
+			<li>Contact Us</li>
+			<li>Itenary</li>
+		</ul>
+	</div>
 
 </body>
 
